Physics tweaks, industrial backdrop

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -172,8 +172,12 @@
 			<div class = "filters filters-background" cv-ref = "bgFilters"></div>
 
 			<div cv-ref = "content" class = "viewport-content">
-				<div cv-ref = "actors" class = "viewport-actors" cv-ref = "actors"></div>
-				<div cv-ref = "particles" class = "viewport-particles" cv-ref = "particles"></div>
+				<div cv-ref = "actors" class = "viewport-actors"></div>
+				<div cv-ref = "particles" class = "viewport-particles"></div>
+ 			</div>
+
+ 			<div cv-ref = "regionBox" class = "viewport-content">
+ 				<div cv-ref = "regions" class = "viewport-actors"></div>
  			</div>
 
 	 		<div
