Basic end stage cutscene, protective shields, tweaking shields and hazards.

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -190,9 +190,7 @@
 			</div>
 			</div>
 			</div>
-
  		</div>
-
 
  		<div class = "viewport-overlay">
 			<div class = "hud hud-top-right hud-table"  cv-if = "debugOsd">
@@ -341,6 +339,8 @@
 			<!-- <div class = "filters filters-foreground" cv-ref = "fgFilters"></div> -->
 
 			<div class = "console [[showConsole]]" cv-ref = "subspace" tab-index = "0">[[subspace]]</div>
+
+			<div class = "shade" data-fade = "[[fade]]"></div>
 
 		</div>
 
