Performance improvements, stabilizing animations & shield placements

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -175,10 +175,6 @@
 				<div cv-ref = "particles" class = "viewport-particles"></div>
  			</div>
 
- 			<div cv-ref = "regionBox" class = "viewport-content">
- 				<div cv-ref = "regions" class = "viewport-actors"></div>
- 			</div>
-
 			<div class = "blurAngle" cv-ref = "blurAngleFg">
 			<div class = "blurDistance" cv-ref = "blurDistanceFg">
  			<div class = "blurAngleCancel" cv-ref = "blurAngleCancelFg">
@@ -320,7 +316,7 @@
 				</table>
 			</div>
 
-			<section class = "full" cv-if = "paused">[[pauseMenu]]</section>
+			<section class = "pause-menu full" cv-if = "paused">[[pauseMenu]]</section>
 
 			[[titlecard]]
 
