Performance, stablizing camera & sprites, emerald HUD

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -202,6 +202,11 @@
 					</tr>
 
 					<tr>
+						<td>[[labelCamera]]</td>
+						<td>[[cameraMode]]</td>
+					</tr>
+
+					<tr>
 						<td>[[labelMode]]</td>
 						<td>[[mode]]</td>
 					</tr>
@@ -254,6 +259,9 @@
 				<div class = "char-hud">
 					[[char]]
 					<div class = "char-icon [[charName|hyphenate]]"></div>
+				</div>
+				<div class = "emerald-hud" cv-each = "emeralds:emerald:e">
+					<img src = "/Sonic/emerald-[[emerald]]-mini.png" />
 				</div>
 
 			</div>
