--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -266,9 +266,9 @@
 
 			</div>
 
-			<div class = "hud hud-bottom-right" cv-if = "showHud">
+			<div class = "hud hud-bottom-right">
 
-				<div class ="sheild-hud [[currentSheild]] [[hasElectric]] [[hasFire]] [[hasWater]]">
+				<div cv-if = "showHud" class ="sheild-hud [[currentSheild]] [[hasElectric]] [[hasFire]] [[hasWater]]">
 					<div class = "sheild-icon sheild-electric"></div>
 					<div class = "sheild-icon spacer"></div>
 					<div class = "sheild-icon sheild-fire"></div>
