--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -10,3 +10,12 @@
   <script>require('initialize');</script>
 </head>
 <body></body>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-188450900-2', 'auto');
+ga('send', 'pageview');
+</script>
+https://i.kym-cdn.com/photos/images/newsfeed/002/165/728/e2d.jpg
