Performance and physics improvements

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -225,6 +225,11 @@
 					</tr>
 
 					<tr>
+						<td>[[labelLayer]]</td>
+						<td>[[layer]]</td>
+					</tr>
+
+					<tr>
 						<td>[[labelGSpeed]]</td>
 						<td>[[gSpeed]]</td>
 					</tr>
