--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -126,6 +126,7 @@
 					<animate
 						attributeName="dy"
 						values = "-128;0"
+						begin="2000ms"
 						dur="2000ms"
 						repeatCount="8"
 					></animate>
@@ -143,6 +144,7 @@
 					<animate
 						attributeName="scale"
 						values = "512;192;0"
+						begin="2000ms"
 						dur="2000ms"
 						repeatCount="1"
 					></animate>
