--- a/app/Menu/main-menu.html
+++ b/app/Menu/main-menu.html
@@ -24,12 +24,13 @@
 							: <span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" /></span>
 						</span>
 						<span cv-if = "item.input" cv-is = "boolean">
-							: <span data-wraps = "select"><select cv-on = "mousedown:toggle(event, item);change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
+							: <span data-wraps = "select"><select cv-on = "mousedown:toggle(event, item, $view, $subview, $parent);change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
 								<option value = "1">on</option>
 								<option value = "0">off</option>
 							</select></span>
 						</span>
 					</li>
+
 
 				</ul>
 
