Improved collision, smoother sonic sprite

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -265,6 +265,11 @@
 						<td>[[frame]]</td>
 					</tr>
 
+					<tr>
+						<td>[[labelIgnore]]</td>
+						<td>[[ignore]]</td>
+					</tr>
+
 				</table>
 			</div>
 
