--- a/app/Menu/main-menu.html
+++ b/app/Menu/main-menu.html
@@ -14,7 +14,7 @@
 
 				<ul cv-ref = "bound" cv-each = "items:item:title">
 
-					<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item);" tabindex="0">
+					<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item, event); keyup(event, item)" tabindex="0">
 						<span class = "title">[[item._title]]</span>
 						<span class = "subtext">[[item.subtext]]</span>
 						<span cv-if = "item.input" cv-is = "string">
@@ -24,10 +24,26 @@
 							: <span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" /></span>
 						</span>
 						<span cv-if = "item.input" cv-is = "boolean">
-							: <span data-wraps = "select"><select cv-on = "mousedown:toggle(event, item, $view, $subview, $parent);change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
+							: <span data-wraps = "select"><select cv-on = "mousedown:toggle(event, item, $view, $subview, $parent); change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
 								<option value = "1">on</option>
 								<option value = "0">off</option>
 							</select></span>
+						</span>
+						<span cv-if = "item.input" cv-is = "select">
+							:
+							[[item.prefix]]
+							<span data-wraps = "select">
+								[[item._value]]
+								<select
+									cv-on    = "mousedown:cycle(event, item, $view, $subview, $parent); listRendered:selectListRendered(event, item, $view, $subview, $parent); input:change(event); change(event)"
+									cv-ref   = "options"
+									cv-bind  = "item._setting"
+									tabindex = "-1"
+									cv-each  = "item.options:option">
+									<option value = "[[option]]">[[option]]</option>
+								</select>
+							</span>
+							[[item.suffix]]
 						</span>
 					</li>
 
