--- a/app/Menu/main-menu.html
+++ b/app/Menu/main-menu.html
@@ -15,6 +15,7 @@
 				<ul cv-ref = "bound" cv-each = "items:item:title">
 
 					<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item, event); keyup(event, item)" tabindex="0">
+						[[item.prefix]]
 						<span class = "title">[[item._title]]</span>
 						<span class = "subtext">[[item.subtext]]</span>
 						<span cv-if = "item.input" cv-is = "string">
@@ -31,20 +32,19 @@
 						</span>
 						<span cv-if = "item.input" cv-is = "select">
 							:
-							[[item.prefix]]
 							<span data-wraps = "select">
 								[[item._value]]
 								<select
-									cv-on    = "mousedown:cycle(event, item, $view, $subview, $parent); listRendered:selectListRendered(event, item, $view, $subview, $parent); input:change(event); change(event)"
+									cv-on    = "input:change(event, title); listRendered:selectListRendered(event, item, title, $view, $subview, $parent);"
 									cv-ref   = "options"
-									cv-bind  = "item._setting"
+									cv-bind  = "item.setting"
 									tabindex = "-1"
 									cv-each  = "item.options:option">
 									<option value = "[[option]]">[[option]]</option>
 								</select>
 							</span>
-							[[item.suffix]]
 						</span>
+						[[item.suffix]]
 					</li>
 
 
