Normal chield, writeup, screenshots.

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -292,9 +292,9 @@
 
 			<div class = "hud hud-bottom-right">
 
-				<div cv-if = "showHud" class ="sheild-hud [[currentSheild]] [[hasElectric]] [[hasFire]] [[hasWater]]">
+				<div cv-if = "showHud" class ="sheild-hud [[currentSheild]] [[hasElectric]] [[hasFire]] [[hasWater]] [[hasNormal]]">
 					<div class = "sheild-icon sheild-electric"></div>
-					<div class = "sheild-icon spacer"></div>
+					<div class = "sheild-icon sheild-normal"></div>
 					<div class = "sheild-icon sheild-fire"></div>
 					<div class = "sheild-icon sheild-water"></div>
 				</div>
