--- a/app/Menu/pause-menu.html
+++ b/app/Menu/pause-menu.html
@@ -12,7 +12,7 @@
 
 			<ul cv-ref = "bound" cv-each = "items:item:title">
 
-				<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item);" tabindex="0">
+				<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(event, item):c;" tabindex="0">
 					<span class = "title">[[item._title]]</span>
 					<span class = "subtext">[[item.subtext]]</span>
 					<span cv-if = "item.input" cv-is = "string">
