--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -5,7 +5,7 @@
 		<span class = "sean-icon"></span>
 		<h1>Pixel Physics</h1>
 	</div>
-	<div class = "viewport [[standalone]] [[fullscreen]] displacement-[[displacement]] mouse-[[mouse]] [[theme]]" cv-ref = "viewport" tabindex="0" cv-on = "click(event);mousemove(event)">
+	<div class = "viewport [[standalone]] [[fullscreen]] displacement-[[displacement]] mouse-[[mouse]] [[theme]] [[hideNowPlaying]]" cv-ref = "viewport" tabindex="0" cv-on = "click(event);mousemove(event)">
 
 		<svg height="32" width="32">
 		<defs>
@@ -349,6 +349,10 @@
 					<tr>
 						<td>[[speedBonusLabel]]</td>
 						<td>[[speedBonus]]</td>
+					</tr>
+					<tr>
+						<td>[[airBonusLabel]]</td>
+						<td>[[airBonus]]</td>
 					</tr>
 					<tr>
 						<td>[[totalBonusLabel]]</td>
