Basic saves and emblem tracking

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -284,10 +284,12 @@
 					[[char]]
 					<div class = "char-icon [[charName|hyphenate]]"></div>
 				</div>
+				<div class = "emblem-hud" cv-each = "emblems:emblem:e">
+					<img src = "/custom/hud-emblem.png" />
+				</div>
 				<div class = "emerald-hud" cv-each = "emeralds:emerald:e">
 					<img src = "/Sonic/emerald-[[emerald]]-mini.png" />
 				</div>
-
 			</div>
 
 			<div class = "hud hud-bottom-right">
