LayerController snapping, Mega mace peformance, skid bonus

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -353,6 +353,10 @@
 						<td>[[speedBonus]]</td>
 					</tr>
 					<tr>
+						<td>[[skidBonusLabel]]</td>
+						<td>[[skidBonus]]</td>
+					</tr>
+					<tr>
 						<td>[[airBonusLabel]]</td>
 						<td>[[airBonus]]</td>
 					</tr>
