Additional badniks, retractible spikes

--- a/app/intro/gamepad-card.html
+++ b/app/intro/gamepad-card.html
@@ -2,6 +2,7 @@
 	<div class = "main-elements-container">
 		<div class = "gamepad-svg"></div>
 		<div class = "caption">Supports HTML5 Gamepad API.</div>
+		<div class = "button-callout">Toggle audio and fullscreen<div class = "arrow"></div></div>
 	</div>
 </div>
 
