--- a/app/effects/screen-fire.html
+++ b/app/effects/screen-fire.html
@@ -16,4 +16,21 @@
 	<div class = "fire-strip" style = "--index:14"><div></div></div>
 	<div class = "fire-strip" style = "--index:15"><div></div></div>
 	<div class = "fire-strip" style = "--index:16"><div></div></div>
+	<div class = "fire-strip" style = "--index:17"><div></div></div>
+	<div class = "fire-strip" style = "--index:18"><div></div></div>
+	<div class = "fire-strip" style = "--index:19"><div></div></div>
+	<div class = "fire-strip" style = "--index:20"><div></div></div>
+	<div class = "fire-strip" style = "--index:21"><div></div></div>
+	<div class = "fire-strip" style = "--index:22"><div></div></div>
+	<div class = "fire-strip" style = "--index:23"><div></div></div>
+	<div class = "fire-strip" style = "--index:24"><div></div></div>
+	<div class = "fire-strip" style = "--index:25"><div></div></div>
+	<div class = "fire-strip" style = "--index:26"><div></div></div>
+	<div class = "fire-strip" style = "--index:27"><div></div></div>
+	<div class = "fire-strip" style = "--index:28"><div></div></div>
+	<div class = "fire-strip" style = "--index:29"><div></div></div>
+	<div class = "fire-strip" style = "--index:30"><div></div></div>
+	<div class = "fire-strip" style = "--index:31"><div></div></div>
+	<div class = "fire-strip" style = "--index:32"><div></div></div>
+
 </div>
