--- a/app/network/chat-box.html
+++ b/app/network/chat-box.html
@@ -1,4 +1,4 @@
-<div class = "chatbox">
+<div class = "chatbox" data-click-barrier>
 
 	<div class = "chat-output" cv-each = "outputLines:line" cv-ref = "chatOutput">
 		<p>[[line]]</p>
