--- a/app/Menu/menu.html
+++ b/app/Menu/menu.html
@@ -3,9 +3,12 @@
 	[[warp]]
 	<div class = "menu-container" data-current-menu = "[[currentKey]]">
 		<ul cv-ref = "bound" cv-each = "items:item:title">
-			<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item);" tabindex="0">
+			<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item);cvDomDetached:removeItem(item);" tabindex="0">
 				<span class = "title">[[item._title]]</span>
 				<span class = "subtext">[[item.subtext]]</span>
+				<span cv-if = "item.input" cv-is = "output">
+					: <span data-wraps = "output"><span cv-ref = "output" cv-bind = "item.setting"></span></span>
+				</span>
 				<span cv-if = "item.input" cv-is = "string">
 					: <span data-wraps = "string"><input cv-ref = "string" cv-bind = "item.setting" cv-on = "keyup(event);input:change(event)" tabindex="-1" /></span>
 				</span>
