--- a/app/controller/gamepad-config.html
+++ b/app/controller/gamepad-config.html
@@ -1,4 +1,4 @@
-<div class = "screen-card screen-card-[[cardName]] [[animation]] input-[[type]]">
+<div class = "gamepad-config [[animation]] input-[[type]]">
 	<span>[[text]]</span>
 	<div class = "buttons">
 		<button cv-on = "click:swap">next</button>
