--- a/app/assets/404.html
+++ b/app/assets/404.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="x-build-time" content="{{ _.BUILD_TIME }}">
-  <title>Pixel Physics</title>
+  <title>Sonic 3000</title>
   <!-- <link rel = "manifest" href = "/manifest.json?build={{ _.BUILD_TIME }}"> -->
   <!-- <link rel="stylesheet" href="/app.css?build={{ _.BUILD_TIME }}"> -->
   <!-- <script src="/app.js?build={{ _.BUILD_TIME }}"></script> -->
