--- a/app/Menu/main-menu.html
+++ b/app/Menu/main-menu.html
@@ -9,6 +9,7 @@
 		<span>[[select]]</span>
 		<span>[[ok]]</span>
 		<span>[[back]]</span>
+		<span>[[revert]]</span>
 	</section>
 
 	<section class = "contents" cv-if = "!connected">
@@ -17,7 +18,7 @@
 			<div>
 				<ul cv-ref = "bound" cv-each = "items:item:title">
 
-					<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item, event); keyup(event, item):c" tabindex="0">
+					<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item, event); auxclick:altRun(item, event); keyup(event, item):c" tabindex="0">
 						[[item.prefix]]
 						<span class = "title">[[item._title]]</span>
 						<span class = "subtext">[[item.subtext]]</span>
@@ -28,7 +29,7 @@
 							</span>
 						</span>
 						<span cv-if = "item.input" cv-is = "string" class = "field">
-							: <span data-wraps = "string"><input cv-ref = "string" cv-bind = "item.setting" cv-on = "keyup(event);input:change(event, title)" tabindex="-1" /></span>
+							<span data-wraps = "string" data-click-barrier><input cv-ref = "string" cv-bind = "item.setting" cv-on = "keyup(event);input:change(event, title)" tabindex="-1" /></span>
 						</span>
 						<span cv-if = "item.input" cv-is = "number" class = "field">
 							<span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event, title)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" /></span>
