--- a/app/network/lobby.html
+++ b/app/network/lobby.html
@@ -50,8 +50,13 @@
 					<span>&lt;motd&gt;: [[motd]]</span>
 				</div>
 				<div class = "row wide frame">
-					<div class = "scroller" cv-ref = "scroller" cv-each = "messages:message">
-						<span class = "message">[[message]]</span>
+					<div class = "scroller" cv-ref = "scroller">
+						<div cv-if = "loading">
+							<img class = "loader icon" src = "/icons/loader.svg" />
+						</div>
+						<div class = "column" cv-each = "messages:message">
+							<span class = "message">[[message]]</span>
+						</div>
 					</div>
 				</div>
 				<div class = "row">
