--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -1,7 +1,7 @@
 <section class = "filters" cv-each = "effects:effect">[[effect]]</section>
 
 <div class = "viewport-frame [[initializing]] [[standalone]] [[secret]] [[level]] [[noIntro]] [[inputType]] [[ntsc]] [[windowFocused]]" data-theme = "[[theme]]" data-bg = "[[bg]]" cv-ref = "frame" data-paused = "[[paused]]" data-smoothing = [[smoothing]] cv-on = "mousedown:interact:c;keydown:interact:c;">
-	<div class = "viewport [[standalone]] [[fullscreen]] displacement-[[displacement]] mouse-[[mouse]] [[theme]] [[hideNowPlaying]]" cv-ref = "viewport" tabindex="0" cv-on = "click(event);mousemove(event)">
+	<div class = "viewport [[standalone]] [[fullscreen]] displacement-[[displacement]] mouse-[[mouse]] [[theme]] [[hideNowPlaying]]" cv-ref = "viewport" tabindex="0" cv-on = "click;mousemove;mousedown;mouseup;">
 
 		<svg height="32" width="32">
 		<defs>
@@ -207,7 +207,7 @@
 					<span class = "combo-list" cv-each = "combo:pop:p">
 						<div>[[pop.label]]</div>
 					</span>
-					<span cv-if = "combo">[[popTopLine]]</span>
+					<span class = "comboTopLine" cv-if = "combo">[[popTopLine]]</span>
 				</span>
 				<span class = "comboFail">[[comboFail]]</span>
 				<span class = "comboResult">[[comboResult]]</span>
