--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -334,7 +334,7 @@
 				</span>
 			</div>
 
-			<div class = "hud hud-dark hud-bottom-left" cv-if = "showHud">
+			<div class = "hud hud-dark hud-bottom-left" cv-if = "showHud" data-extra = "[[audioComment]]">
 				[[nowPlaying]]
 				[[trackName]]
 			</div>
