Float presicion DDA bug, optimizations

--- a/app/Menu/main-menu.html
+++ b/app/Menu/main-menu.html
@@ -32,7 +32,7 @@
 							<span data-wraps = "string" data-click-barrier><input cv-ref = "string" cv-bind = "item.setting" cv-on = "keyup(event);input:change(event, title)" tabindex="-1" /></span>
 						</span>
 						<span cv-if = "item.input" cv-is = "number" class = "field">
-							<span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event, title)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" /></span>
+							<span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event, title)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" step = "[[item.step]]" /></span>
 						</span>
 						<span cv-if = "item.input" cv-is = "boolean" class = "field">
 							<span data-wraps = "select">
