--- a/app/Menu/menu.html
+++ b/app/Menu/menu.html
@@ -13,7 +13,10 @@
 					: <span data-wraps = "string"><input cv-ref = "string" cv-bind = "item.setting" cv-on = "keyup(event);input:change(event)" tabindex="-1" /></span>
 				</span>
 				<span cv-if = "item.input" cv-is = "number">
-					: <span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" /></span>
+					: <span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" step = "[[item.step]]" /></span>
+				</span>
+				<span cv-if = "item.input" cv-is = "range">
+					: <span data-wraps = "range"><input cv-ref = "range" cv-bind = "item.setting" type = "range" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" step = "[[item.step]]" /></span>
 				</span>
 				<span cv-if = "item.input" cv-is = "boolean">
 					: <span data-wraps = "select"><select cv-on = "click:toggle(event,item);mousedown:cancel(event);change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
