Improved camerawork, controller cards.

--- a/app/controller/gamepad-config.html
+++ b/app/controller/gamepad-config.html
@@ -1,7 +1,8 @@
 <div class = "gamepad-config [[animation]] input-[[type]]">
 	<span>[[text]]</span>
-	<div class = "buttons">
+	<div>[[caption]]</div>
+	<!-- <div class = "buttons">
 		<button cv-on = "click:swap">next</button>
 		<button cv-on = "click:exit">exit</button>
-	</div>
+	</div> -->
 </div>
