--- a/app/Menu/pause-menu.html
+++ b/app/Menu/pause-menu.html
@@ -23,10 +23,14 @@
 						: <input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" step = "[[item.step]]" />
 					</span>
 					<span cv-if = "item.input" cv-is = "boolean">
-						: <select cv-on = "click:toggle(event,item);mousedown:cancel(event);change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
-							<option value = "1">on</option>
-							<option value = "0">off</option>
-						</select>
+						:
+						<span data-wraps = "select">
+							[[item._boolValue]]
+							<select cv-on = "click:toggle(event,item);mousedown:cancel(event);change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
+								<option value = "1">on</option>
+								<option value = "0">off</option>
+							</select>
+						</span>
 					</span>
 					<span cv-if = "item.input" cv-is = "select" class = "field">
 						:
